# qstudentmoney

./: .gitignore  CMakeLists.txt  README.md  csvparser.cpp  csvparser.h  dataloader.cpp  dataloader.h  editdialog.cpp  editdialog.h  editdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  student.cpp  student.h
data/: Costs.csv
